# imgv

./: CMakeLists.txt  QUICK_INSTALL_LINUX  QUICK_INSTALL_PI  README.md  config.hpp.in  readme
Modules/: FindFFMPEG.cmake  FindGLEW.cmake  FindLZ4.cmake  FindOCULUS.cmake  FindPROSILICA.cmake  FindPTHREAD.cmake  FindV4L2.cmake  Findoscpack.cmake
apps/: CMakeLists.txt  hydroquebec.cpp  kitti_app.nb  kittistats.cpp  playOmni.cpp  scanBleuet.cpp
docs/: CMakeLists.txt  Doxyfile.in  groups.dox  main.dox  news.dox
examples/: CMakeLists.txt  calibCaptureLoop.cpp  decodePi.cpp  detectTags.cpp  extractPattern.cpp  imgvx.cpp  netCamera.cpp  netReceive.cpp  netSlave.cpp  omniMontagne.cpp  omniPlayer.cpp  omniPlayerLive.cpp  play3Movies.cpp  playCamera.cpp  playDeform.cpp  playFaezeh.cpp  playImage.cpp  playImagePi.cpp  playLeopard.cpp  playMapper.cpp  playMovie.cpp  playPattern.cpp  playPi.cpp  playRhinoPi.cpp  playSuperMapper.cpp  saveMovie.cpp  scanImages.cpp  scanMask.cpp  sendImage.cpp
imgv/: CMakeLists.txt  blob.cpp  blob.hpp  ffmpeg.hpp  graphics.c  graphics.h  imgv.hpp  imqueue.hpp  message.hpp  oscutils.cpp  oscutils.hpp  parseShader.cpp  parseShader.hpp  picam.cpp  picam.hpp  pj.c  pj.h  pjconfig.h  plugin.hpp  pluginDrip.cpp  pluginDrip.hpp  pluginDripMulti.cpp  pluginDripMulti.hpp  pluginFfmpeg.cpp  pluginFfmpeg.hpp  pluginHomog.cpp  pluginHomog.hpp  pluginNet.cpp  pluginNet.hpp  pluginPattern.cpp  pluginPattern.hpp  pluginProsilica.cpp  pluginProsilica.hpp  pluginPtGrey.cpp  pluginPtGrey.hpp  pluginRaspicam.cpp  pluginRaspicam.hpp  pluginRead.cpp  pluginRead.hpp  pluginSave.cpp  (+38 more)
other/: README  install-vimba.sh
other/glfw-3.0.1/: CMakeLists.txt
other/glfw-3.0.1/examples/: simple.c
other/oscpack_1_1_0/: CMakeLists.txt  Makefile
other/oscpack_1_1_0/examples/: SimpleSend.cpp
other/oscpack_1_1_0/osc/: OscOutboundPacketStream.cpp  OscReceivedElements.cpp  OscReceivedElements.h  OscTypes.h
other/remote/: osc-scan-liquid.tcl  osc-scan-pi.tcl  osc-scan-playonly.tcl  osc-scan.tcl  osc.tcl
other/scripts/: adjust_network_buffers  adjust_network_buffers_pi
other/tcltk/: do-display-pi  do-display-pi-save  itemutil.tcl  osc-pi-capture.tcl  osc.tcl  oscdonia.tcl  oscreceive.tcl  osctest.tcl  photo.tcl  readme  reference7.lmap  shaders.smap  superMapper.tcl  superMapperTest.tcl  test.smap  test.tcl  toto.tcl  uml.tcl  visual.tcl
share/: CMakeLists.txt  README
share/shaders/: 0_frag.glsl  1_frag.glsl  2_frag.glsl  A_frag.glsl  B_frag.glsl  C_frag.glsl  basees2_frag.glsl  basees2_vert.glsl  es2-effect-lut.glsl  es2-effect-lutrg.glsl  es2-effect-nop.glsl  es2-simple.glsl  es2-tunnel-lutrg.glsl  es2-video-cam-stream.glsl  es2-video-cam.glsl  es2-video-stereo.glsl  es2-video.glsl  es2lut.glsl  homographieMat_frag.glsl  homographieQuadLut_frag.glsl  homographieQuad_frag.glsl  homographieQuad_vert.glsl  homographie_frag.glsl  mixrgb_frag.glsl  mixrgb_vert.glsl  normal150_frag.glsl  normal150_vert.glsl  normalChroma_frag.glsl  normalRGB_frag.glsl  normal_frag.glsl  normal_vert.glsl  omni2_frag.glsl  omni_frag.glsl  omni_live_frag.glsl  tunnel.glsl
tests/: CMakeLists.txt  testblob.cpp  testcodedlight.cpp  testdie.cpp  testmessage.cpp  testnet.cpp  testremote.cpp  testreply.cpp  testusleep.cpp
